<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/logo"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/nickname"
            android:id="@+id/nickname_input"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="40dp"/>
    </LinearLayout>


    <LinearLayout
        android:paddingTop="50dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/login_password"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/login"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:id="@+id/email_input"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/password_input"
            android:hint="@string/password"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="40dp"/>
        <EditText
            android:layout_marginBottom="10dp"
            android:hint="@string/repeat_password"
            android:id="@+id/repeat_password"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="40dp"/>
    </LinearLayout>


    <Button
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_password"
        android:id="@+id/registration_btn"
        android:text="@string/registration"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:background="@drawable/round_for_date"
        android:layout_width="200dp"
        android:layout_height="40dp"/>


    <ImageView
        android:src="@drawable/subblogo"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>