<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"

                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.bignerdranch.dobro.myjday.MainActivity">


    <ImageView
        android:src="@drawable/logo"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:gravity="center"
            android:hint="@string/login"
            android:id="@+id/login_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="20dp"
        android:id="@+id/login_password"
        android:gravity="center"
        android:layout_below="@+id/login"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:gravity="center"
            android:hint="@string/password"
            android:id="@+id/password_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_password"
        android:id="@+id/login_btn"
        android:text="@string/singup"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:background="@drawable/round_for_date"
        android:layout_width="200dp"
        android:layout_height="40dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_btn"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registration"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/fogotenpass"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/forgatepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
        android:src="@drawable/subblogo"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
