<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    android:background="@color/light_blue"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:visibility="gone"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/show_all"
                    android:theme="@style/titleText"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_alignParentLeft="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:paddingLeft="10dp"
                            android:id="@+id/tags"
                            android:text="У вас нет тегов"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"/>

                        <TextView
                            android:paddingLeft="10dp"
                            android:text="У вас нет тегов"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"/>
                    </LinearLayout>

                    <RadioGroup
                        android:layout_marginRight="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <Switch
                            android:id="@+id/switch_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <Switch
                            android:id="@+id/switch_sphere"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/stage_in_profation"
                        android:theme="@style/titleText"/>

                    <TextView
                        android:id="@+id/age_stage"
                        android:text="18-25"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>

                  <SeekBar
                      android:id="@+id/stage"
                      android:layout_marginBottom="10dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/age_diapason"
                        android:theme="@style/titleText"/>

                    <TextView
                        android:id="@+id/age_value"
                        android:text="18-25"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>

                <SeekBar
                    android:id="@+id/seek_age"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <RelativeLayout
                android:paddingTop="10dp"
                android:id="@+id/hide_me"
                android:background="#fff"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/hide_in_search"
                    android:theme="@style/titleText"/>

                <Switch
                    android:theme="@style/checkBox"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/setting_app"
                    android:theme="@style/titleText"/>

                <RelativeLayout
                    android:id="@+id/notification_message"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Switch
                        android:theme="@style/checkBox"
                        android:id="@+id/message_notify"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/notification_mentorequest"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:text="@string/mentor"/>

                    <Switch
                        android:theme="@style/checkBox"
                        android:id="@+id/mentor_request"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/notification_superlike"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:text="@string/super_like"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Switch
                        android:theme="@style/checkBox"
                        android:paddingRight="10dp"
                        android:id="@+id/switch_superlike"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/another"
                    android:theme="@style/titleText"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/communication"
                        android:paddingLeft="10dp"
                        android:text="@string/communication"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>

                    <TextView
                        android:id="@+id/exit_btn"
                        android:paddingLeft="10dp"
                        android:text="@string/exit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>